Don't bother verifying dex files! It adds to the edit-run-debug cycle.
git-svn-id: http://vogar.googlecode.com/svn/trunk@153 aa685c63-decc-881d-cd2b-7fa72aad72e1